--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DsMovie</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <h1>Olá DsMovie</h1>
+
+    <h3>Promoções</h3>
+    <h3>Agenda de Filmes</h3>
 
 </body>
 </html>
