--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Olá DsMovie</h1>
-
-    <h3>Promoções</h3>
-    <h3>Agenda de Filmes</h3>
+    <header> <!--Essa tag especifica o cabeçalho-->
+        <nav class="container"> <!--Especifica a barra de navegação -->
+            <h1>DsMovie</h1>
+            <a href="https://github.com/gomesjon"> /gomesjon </a>
+        </nav>
+    </header>
 
 </body>
 </html>
