Barra superior parte 2

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body>
     <header> <!--Essa tag especifica o cabeçalho-->
         <nav class="container"> <!--Especifica a barra de navegação -->
+            <!--Esse Class="container" vem do Bootstrap-->
             <h1>DsMovie</h1>
-            <a href="https://github.com/gomesjon"> /gomesjon </a>
+            <div class="dsmovi-contact-container">
+                <img src="img/github.svg" alt="Github">
+                <a href="https://github.com/gomesjon"> /gomesjon </a>
+            </div>
         </nav>
     </header>
 
